Eod issue is addressed.